[package]
name = "cv_first_principles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.1"
imageproc =  { version = "0.22.0", features=["display-window"]}
show-image = { version = "0.9.4", features =["image"]}
nalgebra = "0.29.0"
palette = "0.6.0"